--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         flex justify-between h-[80px] items-center xl:px-0 px-7">
           <!-- Logo -->
           <div>
-            <img src="/assets/logo-0740d7ed.svg" alt="">
+            <img src="./assets/logo-0740d7ed.svg" alt="">
           </div>
           <!-- Nav Options -->
           <div class="hidden xl:flex gap-x-10 font-ggSans justify-between font-[16px] mt-5.5">
@@ -54,10 +54,10 @@
 
     <div class="bg-[#404EED] -mt-1 relative w-full overflow-x-hidden">
         
-      <img src="/assets/Image0-c5e33be1.svg" 
+      <img src="./assets/Image0-c5e33be1.svg" 
       class="hidden xl:block absolute z-10 bottom-0 top-auto scale-x-125" alt="" />
-      <img src="/assets/Image1-88af2910.svg" class="hidden xl:block absolute z-10 bottom-0 -right-[5%]" alt="" />
-      <img src="/assets/Image2-1d5856dd.svg" class="hidden xl:block absolute z-10 bottom-0 -left-[5%]" alt="" />
+      <img src="./assets/Image1-88af2910.svg" class="hidden xl:block absolute z-10 bottom-0 -right-[5%]" alt="" />
+      <img src="./assets/Image2-1d5856dd.svg" class="hidden xl:block absolute z-10 bottom-0 -left-[5%]" alt="" />
       <div
         class="text-[#fff] container max-w-[1200px] xl:px-0 px-7 xl:max-w-[900px] 
         mx-auto text-center xl:h-[555px] flex flex-col gap-5 pt-[50px] xl:pt-[120px]">
@@ -98,10 +98,10 @@
           </a>
         </div>
 
-        <img src="/assets/Image2-1d5856dd.svg" class="block md:hidden ml-[-80px]" alt="" />
+        <img src="./assets/Image2-1d5856dd.svg" class="block md:hidden ml-[-80px]" alt="" />
 
         <div class="hidden md:flex xl:hidden mr-[-150px] mt-[-16%] justify-end">
-          <img src="/assets/Image1-88af2910.svg" class="w-[70%]" alt="" />
+          <img src="./assets/Image1-88af2910.svg" class="w-[70%]" alt="" />
         </div>
 
         <!-- Mobile/Tablet Mode End -->
@@ -114,7 +114,7 @@
 items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
 <!--left section -->
     <div class="md:w-[50%]">
-      <img src="/assets/section1Image-ca0a5f43.svg" alt="" />
+      <img src="./assets/section1Image-ca0a5f43.svg" alt="" />
     </div>
 
     <!-- right section -->
@@ -140,7 +140,7 @@ items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
 <div class="flex container max-w-[1200px] mx-auto items-center
  py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
   <div class="block md:hidden md:w-[50%]">
-    <img src="/assets/section2Image-92362b7c.svg" alt="" />
+    <img src="./assets/section2Image-92362b7c.svg" alt="" />
   </div>
 
   <div class="md:w-[50%]">
@@ -158,7 +158,7 @@ items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
     </div>
   </div>
   <div class="md:w-[50%] md:block hidden">
-    <img src="/assets/section2Image-92362b7c.svg" alt="" />
+    <img src="./assets/section2Image-92362b7c.svg" alt="" />
   </div>
 </div>
 </div>
@@ -166,7 +166,7 @@ items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
 <!-- Section 3 -->
 <div class="flex container max-w-[1200px] mx-auto items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
 <div class="md:w-[50%]">
-  <img src="/assets/section3Image-d134d3aa.svg" alt="" />
+  <img src="./assets/section3Image-d134d3aa.svg" alt="" />
 </div>
 <div class="md:w-[50%]">
   <div class="w-[95%] xl:w-[60%] mx-auto">
@@ -197,11 +197,11 @@ items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
     hello over video, watch friends stream their games, or gather up and
     have a drawing session with screen share.
   </p>
-  <img src="/assets/section4Image-1df9e045.svg" alt="" class="w-[100%]" />
+  <img src="./assets/section4Image-1df9e045.svg" alt="" class="w-[100%]" />
 
   <div class="text-[32px] font-['ggSans'] font-[700] relative 
   w-[100%] flex flex-col items-center gap-[40px]">
-    <img src="/assets/section5Image-108d2175.svg" class="md:block hidden absolute top-0" alt="" />
+    <img src="./assets/section5Image-108d2175.svg" class="md:block hidden absolute top-0" alt="" />
     <div class="md:text-center pt-[30px] leading-[38px]">
       Ready to start your journey?
     </div>
@@ -314,7 +314,7 @@ items-center py-14 md:py-36 flex-col md:flex-row px-7 md:px-0">
       <!-- Section 2 -->
       <div class="flex border-t-2 border-[#5865f2] items-center justify-between pt-7 mx-5">
         <div class="text-white">
-          <img src="/assets/logo-0740d7ed.svg" alt="logo">
+          <img src="./assets/logo-0740d7ed.svg" alt="logo">
         </div>
 
         <div class="xl:block hidden">
